fixing nav gap

--- a/src/app/Components/home-page/home-page.component.css
+++ b/src/app/Components/home-page/home-page.component.css
@@ -21,7 +21,7 @@
     flex-wrap: wrap;
     gap: 3rem;
     justify-content: end;
-    margin: 1rem;
+    margin: 1rem 1rem 2rem 1rem;
     padding: 2rem 3rem 0rem 0rem;
     list-style: none;
 }
